# medical-multi-agents

./: .gitignore  README.md  app.py  main.py  pyproject.toml
backend/: langgraph.json  requirements.txt
backend/app/: api.py  graph.py  state.py
backend/app/nodes/: diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/tools/: care_tools.py  mcp_client.py  patient_tools.py
backend/tests/: test_api.py
frontend/: app.py  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/core/: constants.dart
frontend/lib/data/models/: consultation_model.dart
frontend/lib/data/repositories/: api_repository.dart
frontend/lib/presentation/providers/: consultation_provider.dart
frontend/lib/presentation/screens/: 1_initial_case_screen.dart  2_patient_qa_screen.dart  3_physician_review_screen.dart  4_final_report_screen.dart
frontend/test/: widget_test.dart
mcp_server/: server.py
